# HQU_Assistant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
HQU_APP/: CMakeLists.txt  hqua.qrc
HQU_APP/include/: AppInfo.h  config.h
HQU_APP/include/fileio/: fileio.h
HQU_APP/include/language/: Lang.h
HQU_APP/include/qmlhttprequest/: qmlhttprequest_global.hpp  request.hpp
HQU_APP/qml/: main.qml
HQU_APP/qml/component/: About.qml  CustomWindow.qml  FileManager.qml  FluTableViewClassic.qml  UserInfo.qml  WaitingLoop.qml
HQU_APP/qml/fjsjyt/: file.qml  file_new.qml  login.qml
HQU_APP/qml/fjsjyt/global/: FJSJYTInfo.qml  qmldir
HQU_APP/qml/fjsjyt/page/: fjsjyt_detail.qml
HQU_APP/qml/global/: ItemsFooter.qml  ItemsOriginal.qml  MainEvent.qml
HQU_APP/qml/global/network/: XmlHttpRequest.qml  qmldir
HQU_APP/qml/hqu/global/: HQUPlatformInfo.qml  qmldir
HQU_APP/qml/hqu/oa/: processed_files.qml  undistributed_note.qml  unprocess_files.qml
HQU_APP/qml/hqu/uni_platform/: login.qml
HQU_APP/qml/hqu/uni_platform/component/: LoginCapcha.qml  UserInfo.qml
HQU_APP/qml/page/: MainPage.qml  TaskBrowser.qml
HQU_APP/qml/section/: Home.qml  Settings.qml
HQU_APP/res/: icon.rc
HQU_APP/res/image/: AppIcon.icns
HQU_APP/src/: AppInfo.cpp  config.cpp  main.cpp
HQU_APP/src/fileio/: fileio.cpp
HQU_APP/src/language/: En.cpp  Zh.cpp
HQU_APP/src/qmlhttprequest/: qmlhttprequest.cpp  request.cpp
scripts/: windows-mingw-publish.ps1  windows-publish.ps1
