cmake_minimum_required(VERSION 3.20)

project(HQU_Assistant_APP VERSION 0.1 LANGUAGES CXX)

add_definitions(-DFRAMELESSHELPER_CORE_NO_DEBUG_OUTPUT)
add_definitions(-DFRAMELESSHELPER_QUICK_NO_DEBUG_OUTPUT)
set(FRAMELESSHELPER_BUILD_STATIC ON)
set(FRAMELESSHELPER_BUILD_WIDGETS OFF)
set(FRAMELESSHELPER_NO_SUMMARY OFF)
set(FRAMELESSHELPER_REPRODUCIBLE_OUTPUT ON)
set(FLUENTUI_BUILD_FRAMELESSHEPLER OFF)
set(FLUENTUI_BUILD_EXAMPLES OFF)
set(FLUENTUI_BUILD_STATIC_LIB ON)
add_subdirectory(3rdparty/framelesshelper)
add_subdirectory(3rdparty/FluentUI)
add_subdirectory(HQU_APP)
